--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,11 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+        
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20,
+          node-version: 20
           cache: 'npm'
+          
       - name: Install Dependencies
         run: npm install
 
