--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
           cache: 'npm'
           
       - name: Install Dependencies
