--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-deployment",
+  "name": "vite-deployment-github",
   "private": true,
   "version": "0.0.0",
   "type": "module",
